feat: Login request

--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
+    "axios": "^1.6.2",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-social-login-buttons": "^3.9.1"
   },
   "devDependencies": {
     "@types/node": "^20",
