--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.2",
     "next": "14.0.3",
+    "next-client-cookies": "^1.1.0",
+    "next-redux-wrapper": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^8.1.3",
     "react-social-login-buttons": "^3.9.1"
   },
   "devDependencies": {
