--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
     "@reduxjs/toolkit": "^1.9.7",
+    "@types/react-image-gallery": "^1.2.4",
     "axios": "^1.6.7",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "next-redux-wrapper": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-image-gallery": "^1.3.0",
     "react-redux": "^8.1.3",
     "react-social-login-buttons": "^3.9.1"
   },
