--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@types/react-image-gallery": "^1.2.4",
     "axios": "^1.6.7",
+    "framer-motion": "^11.0.20",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "next-redux-wrapper": "^8.1.0",
@@ -30,11 +31,11 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
   "peerDependencies": {
