--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-image-gallery": "^1.2.4",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.20",
+    "moment": "^2.30.1",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "next-redux-wrapper": "^8.1.0",
