--- a/package.json
+++ b/package.json
@@ -14,19 +14,25 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
+    "@radix-ui/themes": "^3.1.6",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/react-image-gallery": "^1.2.4",
     "axios": "^1.6.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.0.20",
+    "lucide-react": "^0.461.0",
     "moment": "^2.30.1",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "next-redux-wrapper": "^8.1.0",
+    "next-themes": "^0.4.3",
     "react": "^18",
     "react-dom": "^18",
     "react-image-gallery": "^1.3.0",
     "react-redux": "^8.1.3",
-    "react-social-login-buttons": "^3.9.1"
+    "react-social-login-buttons": "^3.9.1",
+    "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
     "@types/node": "^20",
