--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/themes": "^3.1.6",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/react-image-gallery": "^1.2.4",
@@ -32,7 +34,8 @@
     "react-image-gallery": "^1.3.0",
     "react-redux": "^8.1.3",
     "react-social-login-buttons": "^3.9.1",
-    "tailwind-merge": "^2.5.5"
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
