--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.14.18",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/themes": "^3.1.6",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/react-image-gallery": "^1.2.4",
