--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.0.20",
     "lucide-react": "^0.461.0",
     "moment": "^2.30.1",
