--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
@@ -16,7 +17,9 @@
     "@mui/material": "^5.14.18",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-slider": "^1.2.2",
     "@radix-ui/themes": "^3.1.6",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/react-image-gallery": "^1.2.4",
