--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-redux": "^8.1.3",
     "react-social-login-buttons": "^3.9.1",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
