--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slider": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/themes": "^3.1.6",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/react-image-gallery": "^1.2.4",
