--- a/package.json
+++ b/package.json
@@ -27,10 +27,14 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/themes": "^3.1.6",
     "@reduxjs/toolkit": "^1.9.7",
+    "@types/d3-scale": "^4.0.8",
+    "@types/d3-scale-chromatic": "^3.1.0",
     "@types/react-image-gallery": "^1.2.4",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "d3-scale": "^4.0.2",
+    "d3-scale-chromatic": "^3.1.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.0.20",
     "lucide-react": "^0.461.0",
@@ -40,6 +44,7 @@
     "next-redux-wrapper": "^8.1.0",
     "next-themes": "^0.4.3",
     "react": "^18",
+    "react-d3-cloud": "^1.0.6",
     "react-dom": "^18",
     "react-image-gallery": "^1.3.0",
     "react-redux": "^8.1.3",
