--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "next-auth": "^4.24.5",
     "next-redux-wrapper": "^8.1.0",
     "next-themes": "^0.4.3",
+    "re-resizable": "^6.10.3",
     "react": "^18",
     "react-d3-cloud": "^1.0.6",
     "react-dom": "^18",
