--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@dnd-kit/core": "^6.3.1",
-    "@dnd-kit/modifiers": "^9.0.0",
-    "@dnd-kit/utilities": "^3.2.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
@@ -43,12 +40,12 @@
     "next-auth": "^4.24.5",
     "next-redux-wrapper": "^8.1.0",
     "next-themes": "^0.4.3",
-    "re-resizable": "^6.10.3",
     "react": "^18",
     "react-d3-cloud": "^1.0.6",
     "react-dom": "^18",
     "react-image-gallery": "^1.3.0",
     "react-redux": "^8.1.3",
+    "react-rnd": "^10.4.14",
     "react-social-login-buttons": "^3.9.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
