--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/d3-scale": "^4.0.8",
     "@types/d3-scale-chromatic": "^3.1.0",
     "@types/react-image-gallery": "^1.2.4",
+    "ably": "^2.6.0",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
