--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slider": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/themes": "^3.1.6",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/d3-scale": "^4.0.8",
